# Signals-and-Systems

./: .gitignore  16231275-刘瀚骋.docx  16231275_刘瀚骋_信号与系统第一次实验实验报告.docx  16231275_刘瀚骋_信号与系统第三次实验实验报告.docx  16231275_刘瀚骋_信号与系统第二次实验实验报告.docx  CMakeLists.txt  Makefile  READEME.md  README.md  Report.md
common/: calculus.c  calculus.h  canvas.c  canvas.h  functype.c  functype.h  lambda.h  plot.c  plot.h  transferFunction.c  transferFunction.h
exercise1/: 16231275_刘瀚骋.tar  Makefile  READEME.md  convolution.c  convolution.h  exercise  result.csv
exercise2/: Makefile  main.c
exercise3/: .AF-result.csv.swp  AF-result.csv  Makefile  PF-result.csv  input1  input2  input_test  main  main.c  main1  main2
exercise5/: main.c
